[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day1"
path = "src/bin/day1/main.rs"
[[bin]]
name = "day2"
path = "src/bin/day2/main.rs"
[[bin]]
name = "day3"
path = "src/bin/day3/main.rs"
[[bin]]
name = "day4"
path = "src/bin/day4/main.rs"
[[bin]]
name = "day5"
path = "src/bin/day5/main.rs"
[[bin]]
name = "day6"
path = "src/bin/day6/main.rs"
[[bin]]
name = "day7"
path = "src/bin/day7/main.rs"
[[bin]]
name = "day8"
path = "src/bin/day8/main.rs"
[[bin]]
name = "day9"
path = "src/bin/day9/main.rs"
[[bin]]
name = "day10"
path = "src/bin/day10/main.rs"
[[bin]]
name = "day11"
path = "src/bin/day11/main.rs"
[[bin]]
name = "day12"
path = "src/bin/day12/main.rs"
[[bin]]
name = "day13"
path = "src/bin/day13/main.rs"
[[bin]]
name = "day14"
path = "src/bin/day14/main.rs"
[[bin]]
name = "day15"
path = "src/bin/day15/main.rs"
[[bin]]
name = "day16"
path = "src/bin/day16/main.rs"
[[bin]]
name = "day17"
path = "src/bin/day17/main.rs"
[[bin]]
name = "day18"
path = "src/bin/day18/main.rs"
[[bin]]
name = "day19"
path = "src/bin/day19/main.rs"
[[bin]]
name = "day20"
path = "src/bin/day20/main.rs"
[[bin]]
name = "day21"
path = "src/bin/day21/main.rs"
[[bin]]
name = "day22"
path = "src/bin/day22/main.rs"
[[bin]]
name = "day23"
path = "src/bin/day23/main.rs"
[[bin]]
name = "day24"
path = "src/bin/day24/main.rs"
[[bin]]
name = "day25"
path = "src/bin/day25/main.rs"
